Fix rendering on mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,39 +5,6 @@
   margin-bottom: 3rem;
 }
 
-.blog-post-preview {
-  font-size: 1.3rem;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  padding: 1rem 0;
-  border-bottom: 2px solid #EEE;
-}
-
-.blog-post-preview:last-child {
-  border-bottom-width: 0;
-}
-
-.blog-post-preview h3 {
-  font-size: 2.2rem;
-  margin-top: 0;
-}
-
-.blog-post-preview .title {
-  font-size: 2.2rem;
-  margin: 0;
-}
-
-.blog-post-preview .link {
-  margin-left: auto;
-}
-
-.blog-post-preview .date {
-  color: #555;
-  margin-bottom: 1rem;
-}
-
 hr {
   border-width: 0;
   border-top: 1px solid #E1E1E1;
